# pysbm

./: .gitignore  Example.ipynb  SBMtry.ipynb  pyproject.toml
pysbm/sbm/: inference.py
